Release 3.11.0 (?? ????????? 201?)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Release 3.11.0 is under development, not yet released.

* ================== PLATFORM CHANGES =================

* s390x: It is now required for the host to have the long displacement
  facility. The oldest supported machine model is z990.

* ==================== TOOL CHANGES ====================

* Memcheck:

* Helgrind:

* Callgrind:

* ==================== OTHER CHANGES ====================

* Address description logic (used by memcheck and helgrind)
  now describes addressed in anonymous segments, file mmap-ed
  segments, shared memory segments and the brk data segment.

* Option --error-markers=<begin>,<end> can be used to mark
  the begin/end of errors in textual output mode, to facilitate
  searching/extracting errors in output files mixing valgrind
  errors with program output.

* New Option --max-threads=<number> can be used to increase the
  number of threads valgrind can handle. The default is 500 threads
  which should be more than enough for most applications.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

116002  VG_(printf): Problems with justification of strings and integers
155125  avoid cutting away file:lineno after long function name
197259  Unsupported arch_prtctl PR_SET_GS option
211926  Avoid compilation warnings in valgrind.h with -pedantic
226609  Crediting upstream authors in man page